Support WaitForCompletionStateIds and add local activity input debug (#407)
